--- a/wiki/Sketcher_Dimension.html
+++ b/wiki/Sketcher_Dimension.html
@@ -1,9 +1,9 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Sketcher Dimension</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Sketcher+Dimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher Bema&szlig;en (82% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher Bema&szlig;en (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher Contrainte de dimension (82% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher: Dimensione (82% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="Szkicownik: Wi&#261;zania wymiar&oacute;w (82% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="fr/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher Dimension (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="it/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher: Dimensione (100% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="pl/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Szkicownik: Wi&#261;zania wymiar&oacute;w (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="ru/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="&#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088; &#1056;&#1072;&#1079;&#1084;&#1077;&#1088; (82% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="ja/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--low" title="&#12473;&#12465;&#12483;&#12481;&#12515;&#12540;&#12539;&#23544;&#27861; (9% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="ko/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--med" title="&#49828;&#52992;&#52824; &#52824;&#49688; (64% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -82,8 +82,9 @@
 <li>This tool always runs in continue mode: optionally keep creating constraints.</li></ol></li>
 <li>To finish, right-click or press <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span>, or start another geometry or constraint creation tool.</li></ul></li></ol>
 <h2><span class="mw-headline" id="Notes">Notes</span></h2>
-<ul><li><span typeof="mw:File"><a href="index.php?title=Sketcher_ConstrainDistanceX.svg&amp;filetimestamp=20240101173427&amp;.html" class="mw-file-description"><img src="File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Horizontal dimensions</a> and <span typeof="mw:File"><a href="index.php?title=Sketcher_ConstrainDistanceY.svg&amp;filetimestamp=20240101173443&amp;.html" class="mw-file-description"><img src="File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> have a distinct behavior compared to <span typeof="mw:File"><a href="index.php?title=Sketcher_ConstrainDistance.svg&amp;filetimestamp=20240101173515&amp;.html" class="mw-file-description"><img src="File/Sketcher_ConstrainDistance.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance">distance dimensions</a>. The first two dimension types also constrain the relative positions of the measured points so that they won't <a href="Sketcher_Workbench.html#Flipping" title="Sketcher Workbench">switch places</a>. For example, for a horizontal dimension the left point will always remain the left point. This is not the case for distance dimensions. When using this tool to apply a dimensional constraint to points with the same X- or Y-coordinate you need to take care when picking the point to position it. You can verify which dimension type will be created by checking the last item in the <a href="Sketcher_Dialog.html#Constraints" title="Sketcher Dialog">Constraints section of the Sketcher Dialog</a>, this will dynamically update as you move the mouse.</li></ul>
-<p><br>
+<p><span typeof="mw:File"><a href="index.php?title=Sketcher_ConstrainDistanceX.svg&amp;filetimestamp=20240101173427&amp;.html" class="mw-file-description"><img src="File/Sketcher_ConstrainDistanceX.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">Horizontal dimensions</a> and <span typeof="mw:File"><a href="index.php?title=Sketcher_ConstrainDistanceY.svg&amp;filetimestamp=20240101173443&amp;.html" class="mw-file-description"><img src="File/Sketcher_ConstrainDistanceY.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> have a distinct behavior compared to <span typeof="mw:File"><a href="index.php?title=Sketcher_ConstrainDistance.svg&amp;filetimestamp=20240101173515&amp;.html" class="mw-file-description"><img src="File/Sketcher_ConstrainDistance.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_ConstrainDistance.html" title="Sketcher ConstrainDistance">distance dimensions</a>. The first two dimension types also constrain the relative positions of the measured points so that they won't <a href="Sketcher_Workbench.html#Flipping" title="Sketcher Workbench">switch places</a>. For example, for a horizontal dimension the left point will always remain the left point. 
+</p><p>This is not the case for distance dimensions. When using this tool to apply a dimensional constraint to points with the same X- or Y-coordinate you need to take care when picking the point to position it. You can verify which dimension type will be created by checking the last item in the <a href="Sketcher_Dialog.html#Constraints" title="Sketcher Dialog">Constraints section of the Sketcher Dialog</a>, this will dynamically update as you move the mouse.
+</p><p><br>
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="File/Sketcher_ToggleConstruction.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="Sketcher_ToggleConstruction.html" title="Sketcher ToggleConstruction">Toggle Construction Geometry</a></div>
@@ -95,7 +96,7 @@
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a>
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
-<ul><li><b>General:</b> <a href="Sketcher_NewSketch.html" title="Sketcher NewSketch">New Sketch</a>, <a href="Sketcher_EditSketch.html" title="Sketcher EditSketch">Edit Sketch</a>, <a href="Sketcher_MapSketch.html" title="Sketcher MapSketch">Attach Sketch</a>, <a href="Sketcher_ReorientSketch.html" title="Sketcher ReorientSketch">Reorient Sketch</a>, <a href="Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Validate Sketch</a>, <a href="Sketcher_MergeSketches.html" title="Sketcher MergeSketches">Merge Sketches</a>, <a href="Sketcher_MirrorSketch.html" title="Sketcher MirrorSketch">Mirror Sketch</a>, <a href="Sketcher_LeaveSketch.html" title="Sketcher LeaveSketch">Leave Sketch</a>, <a href="Sketcher_ViewSketch.html" title="Sketcher ViewSketch">Align View to Sketch</a>, <a href="Sketcher_ViewSection.html" title="Sketcher ViewSection">Toggle Section View</a>, <a href="Sketcher_Grid.html" title="Sketcher Grid">Toggle Grid</a>, <a href="Sketcher_Snap.html" title="Sketcher Snap">Toggle Snap</a>, <a href="Sketcher_RenderingOrder.html" title="Sketcher RenderingOrder">Rendering Order</a>, <a href="Sketcher_StopOperation.html" title="Sketcher StopOperation">Stop Operation</a></li></ul>
+<ul><li><b>General:</b> <a href="Sketcher_NewSketch.html" title="Sketcher NewSketch">New Sketch</a>, <a href="Sketcher_EditSketch.html" title="Sketcher EditSketch">Edit Sketch</a>, <a href="Sketcher_MapSketch.html" title="Sketcher MapSketch">Attach Sketch</a>, <a href="Sketcher_ReorientSketch.html" title="Sketcher ReorientSketch">Reorient Sketch</a>, <a href="Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Validate Sketch</a>, <a href="Sketcher_MergeSketches.html" title="Sketcher MergeSketches">Merge Sketches</a>, <a href="Sketcher_MirrorSketch.html" title="Sketcher MirrorSketch">Mirror Sketch</a>, <a href="Sketcher_LeaveSketch.html" title="Sketcher LeaveSketch">Leave Sketch</a>, <a href="Sketcher_ViewSketch.html" title="Sketcher ViewSketch">Align View to Sketch</a>, <a href="Sketcher_ViewSection.html" title="Sketcher ViewSection">Toggle Section View</a>, <a href="Sketcher_StopOperation.html" title="Sketcher StopOperation">Stop Operation</a>, <a href="Sketcher_Grid.html" title="Sketcher Grid">Grid</a>, <a href="Sketcher_Snap.html" title="Sketcher Snap">Snap</a>, <a href="Sketcher_RenderingOrder.html" title="Sketcher RenderingOrder">Rendering Order</a></li></ul>
 <hr>
 <ul><li><b>Geometries:</b> <a href="Sketcher_CreatePoint.html" title="Sketcher CreatePoint">Point</a>, <a href="Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">Polyline</a>, <a href="Sketcher_CreateLine.html" title="Sketcher CreateLine">Line</a>, <a href="Sketcher_CreateArc.html" title="Sketcher CreateArc">Arc From Center</a>, <a href="Sketcher_Create3PointArc.html" title="Sketcher Create3PointArc">Arc From 3 Points</a>, <a href="Sketcher_CreateArcOfEllipse.html" title="Sketcher CreateArcOfEllipse">Elliptical Arc</a>, <a href="Sketcher_CreateArcOfHyperbola.html" title="Sketcher CreateArcOfHyperbola">Hyperbolic Arc</a>, <a href="Sketcher_CreateArcOfParabola.html" title="Sketcher CreateArcOfParabola">Parabolic Arc</a>, <a href="Sketcher_CreateCircle.html" title="Sketcher CreateCircle">Circle From Center</a>, <a href="Sketcher_Create3PointCircle.html" title="Sketcher Create3PointCircle">Circle From 3 Points</a>, <a href="Sketcher_CreateEllipseByCenter.html" title="Sketcher CreateEllipseByCenter">Ellipse From Center</a>, <a href="Sketcher_CreateEllipseBy3Points.html" title="Sketcher CreateEllipseBy3Points">Ellipse From 3 Points</a>, <a href="Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Rectangle</a>, <a href="Sketcher_CreateRectangle_Center.html" title="Sketcher CreateRectangle Center">Centered Rectangle</a>, <a href="Sketcher_CreateOblong.html" title="Sketcher CreateOblong">Rounded Rectangle</a>, <a href="Sketcher_CreateTriangle.html" title="Sketcher CreateTriangle">Triangle</a>, <a href="Sketcher_CreateSquare.html" title="Sketcher CreateSquare">Square</a>, <a href="Sketcher_CreatePentagon.html" title="Sketcher CreatePentagon">Pentagon</a>, <a href="Sketcher_CreateHexagon.html" title="Sketcher CreateHexagon">Hexagon</a>, <a href="Sketcher_CreateHeptagon.html" title="Sketcher CreateHeptagon">Heptagon</a>, <a href="Sketcher_CreateOctagon.html" title="Sketcher CreateOctagon">Octagon</a>, <a href="Sketcher_CreateRegularPolygon.html" title="Sketcher CreateRegularPolygon">Polygon</a>, <a href="Sketcher_CreateSlot.html" title="Sketcher CreateSlot">Slot</a>, <a href="Sketcher_CreateArcSlot.html" title="Sketcher CreateArcSlot">Arc Slot</a>, <a href="Sketcher_CreateBSpline.html" title="Sketcher CreateBSpline">B-Spline</a>, <a href="Sketcher_CreatePeriodicBSpline.html" title="Sketcher CreatePeriodicBSpline">Periodic B-Spline</a>, <a href="Sketcher_CreateBSplineByInterpolation.html" title="Sketcher CreateBSplineByInterpolation">B-Spline From Knots</a>, <a href="Sketcher_CreatePeriodicBSplineByInterpolation.html" title="Sketcher CreatePeriodicBSplineByInterpolation">Periodic B-Spline From Knots</a>, <a href="Sketcher_ToggleConstruction.html" title="Sketcher ToggleConstruction">Toggle Construction Geometry</a></li></ul>
 <hr>
@@ -128,35 +129,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20250920110004
+Cached time: 20260121053912
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.124 seconds
-Real time usage: 0.153 seconds
+CPU time usage: 0.140 seconds
+Real time usage: 0.169 seconds
 Preprocessor visited node count: 424/1000000
-Post&#8208;expand include size: 24416/2097152 bytes
-Template argument size: 9609/2097152 bytes
+Post&#8208;expand include size: 24388/2097152 bytes
+Template argument size: 9595/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1708/5000000 bytes
+Unstrip post&#8208;expand size: 1714/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.620      1 -total
- 27.41%    4.555      1 Template:Sketcher_Tools_navi
- 25.94%    4.311      2 Template:Navigation_menu_2
- 16.87%    2.803      1 Template:GuiCommand
- 16.65%    2.767      1 Template:Userdocnavi
- 11.85%    1.969      2 Template:Docnav
- 11.65%    1.936      2 Template:Value
-  5.95%    0.989      4 Template:KEY
-  5.85%    0.972      4 Template:MenuCommand
-  5.57%    0.926      2 Template:Incode
+100.00%   23.641      1 -total
+ 29.18%    6.898      1 Template:Sketcher_Tools_navi
+ 22.33%    5.279      2 Template:Navigation_menu_2
+ 17.27%    4.083      1 Template:GuiCommand
+ 14.75%    3.486      2 Template:Docnav
+ 13.40%    3.169      1 Template:Userdocnavi
+ 11.72%    2.770      2 Template:Value
+  5.63%    1.330      2 Template:Incode
+  5.32%    1.258      4 Template:KEY
+  4.58%    1.083      4 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:331921-0!canonical and timestamp 20250920110004 and revision id 1645922. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:331921-0!canonical and timestamp 20260121053918 and revision id 1741784. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
