--- a/wiki/Sketcher_ConstrainEqual.html
+++ b/wiki/Sketcher_ConstrainEqual.html
@@ -1,10 +1,10 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Sketcher ConstrainEqual</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Sketcher+ConstrainEqual&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher GleichheitFestlegen (93% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher GleichheitFestlegen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="es/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Croquizador RestringirIgual (14% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="fr/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher Contrainte d'&eacute;galit&eacute; (93% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher: Vincolo uguale (93% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--high" title="Szkicownik: Wi&#261;zanie r&oacute;wno&#347;ci (93% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="fr/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher Contrainte d'&eacute;galit&eacute; (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="it/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher: Vincolo uguale (100% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="pl/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--complete" title="Szkicownik: Wi&#261;zanie r&oacute;wno&#347;ci (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="pt/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Constraint EqualLength (0% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="pt-br/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--med" title="Restri&ccedil;&atilde;o de igualdade (21% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="ro/Sketcher_ConstrainEqual.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Constr&icirc;ngere de egalitate (14% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -87,6 +87,9 @@
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">Sketch</span><span class="o">.</span><span class="n">addConstraint</span><span class="p">(</span><span class="n">Sketcher</span><span class="o">.</span><span class="n">Constraint</span><span class="p">(</span><span class="s1">'Equal'</span><span class="p">,</span> <span class="n">Edge1</span><span class="p">,</span> <span class="n">Edge2</span><span class="p">))</span>
 </pre></div>
 <p>The <a href="Sketcher_scripting.html" title="Sketcher scripting">Sketcher scripting</a> page explains the values which can be used for <code>Edge1</code> and <code>Edge2</code> and  contains further examples on how to create constraints from Python scripts.
+</p>
+<h2><span class="mw-headline" id="Notes">Notes</span></h2>
+<p>Using <a href="Sketcher_ConstrainDistanceX.html" title="Sketcher ConstrainDistanceX">horizontal</a> and <a href="Sketcher_ConstrainDistanceY.html" title="Sketcher ConstrainDistanceY">vertical dimensions</a> instead of <a class="mw-selflink selflink">equal constraints</a> can prevent <a href="Sketcher_Workbench.html#Flipping" title="Sketcher Workbench">flipping</a>. Points constrained by these dimensions will not switch places. The constraints must be linked with an expression to each other or to a value in a VarSet or spreadsheet.
 </p><p><br>
 </p>
 <div class="docnav">
@@ -99,7 +102,7 @@
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a>
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
-<ul><li><b>General:</b> <a href="Sketcher_NewSketch.html" title="Sketcher NewSketch">New Sketch</a>, <a href="Sketcher_EditSketch.html" title="Sketcher EditSketch">Edit Sketch</a>, <a href="Sketcher_MapSketch.html" title="Sketcher MapSketch">Attach Sketch</a>, <a href="Sketcher_ReorientSketch.html" title="Sketcher ReorientSketch">Reorient Sketch</a>, <a href="Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Validate Sketch</a>, <a href="Sketcher_MergeSketches.html" title="Sketcher MergeSketches">Merge Sketches</a>, <a href="Sketcher_MirrorSketch.html" title="Sketcher MirrorSketch">Mirror Sketch</a>, <a href="Sketcher_LeaveSketch.html" title="Sketcher LeaveSketch">Leave Sketch</a>, <a href="Sketcher_ViewSketch.html" title="Sketcher ViewSketch">Align View to Sketch</a>, <a href="Sketcher_ViewSection.html" title="Sketcher ViewSection">Toggle Section View</a>, <a href="Sketcher_Grid.html" title="Sketcher Grid">Toggle Grid</a>, <a href="Sketcher_Snap.html" title="Sketcher Snap">Toggle Snap</a>, <a href="Sketcher_RenderingOrder.html" title="Sketcher RenderingOrder">Rendering Order</a>, <a href="Sketcher_StopOperation.html" title="Sketcher StopOperation">Stop Operation</a></li></ul>
+<ul><li><b>General:</b> <a href="Sketcher_NewSketch.html" title="Sketcher NewSketch">New Sketch</a>, <a href="Sketcher_EditSketch.html" title="Sketcher EditSketch">Edit Sketch</a>, <a href="Sketcher_MapSketch.html" title="Sketcher MapSketch">Attach Sketch</a>, <a href="Sketcher_ReorientSketch.html" title="Sketcher ReorientSketch">Reorient Sketch</a>, <a href="Sketcher_ValidateSketch.html" title="Sketcher ValidateSketch">Validate Sketch</a>, <a href="Sketcher_MergeSketches.html" title="Sketcher MergeSketches">Merge Sketches</a>, <a href="Sketcher_MirrorSketch.html" title="Sketcher MirrorSketch">Mirror Sketch</a>, <a href="Sketcher_LeaveSketch.html" title="Sketcher LeaveSketch">Leave Sketch</a>, <a href="Sketcher_ViewSketch.html" title="Sketcher ViewSketch">Align View to Sketch</a>, <a href="Sketcher_ViewSection.html" title="Sketcher ViewSection">Toggle Section View</a>, <a href="Sketcher_StopOperation.html" title="Sketcher StopOperation">Stop Operation</a>, <a href="Sketcher_Grid.html" title="Sketcher Grid">Grid</a>, <a href="Sketcher_Snap.html" title="Sketcher Snap">Snap</a>, <a href="Sketcher_RenderingOrder.html" title="Sketcher RenderingOrder">Rendering Order</a></li></ul>
 <hr>
 <ul><li><b>Geometries:</b> <a href="Sketcher_CreatePoint.html" title="Sketcher CreatePoint">Point</a>, <a href="Sketcher_CreatePolyline.html" title="Sketcher CreatePolyline">Polyline</a>, <a href="Sketcher_CreateLine.html" title="Sketcher CreateLine">Line</a>, <a href="Sketcher_CreateArc.html" title="Sketcher CreateArc">Arc From Center</a>, <a href="Sketcher_Create3PointArc.html" title="Sketcher Create3PointArc">Arc From 3 Points</a>, <a href="Sketcher_CreateArcOfEllipse.html" title="Sketcher CreateArcOfEllipse">Elliptical Arc</a>, <a href="Sketcher_CreateArcOfHyperbola.html" title="Sketcher CreateArcOfHyperbola">Hyperbolic Arc</a>, <a href="Sketcher_CreateArcOfParabola.html" title="Sketcher CreateArcOfParabola">Parabolic Arc</a>, <a href="Sketcher_CreateCircle.html" title="Sketcher CreateCircle">Circle From Center</a>, <a href="Sketcher_Create3PointCircle.html" title="Sketcher Create3PointCircle">Circle From 3 Points</a>, <a href="Sketcher_CreateEllipseByCenter.html" title="Sketcher CreateEllipseByCenter">Ellipse From Center</a>, <a href="Sketcher_CreateEllipseBy3Points.html" title="Sketcher CreateEllipseBy3Points">Ellipse From 3 Points</a>, <a href="Sketcher_CreateRectangle.html" title="Sketcher CreateRectangle">Rectangle</a>, <a href="Sketcher_CreateRectangle_Center.html" title="Sketcher CreateRectangle Center">Centered Rectangle</a>, <a href="Sketcher_CreateOblong.html" title="Sketcher CreateOblong">Rounded Rectangle</a>, <a href="Sketcher_CreateTriangle.html" title="Sketcher CreateTriangle">Triangle</a>, <a href="Sketcher_CreateSquare.html" title="Sketcher CreateSquare">Square</a>, <a href="Sketcher_CreatePentagon.html" title="Sketcher CreatePentagon">Pentagon</a>, <a href="Sketcher_CreateHexagon.html" title="Sketcher CreateHexagon">Hexagon</a>, <a href="Sketcher_CreateHeptagon.html" title="Sketcher CreateHeptagon">Heptagon</a>, <a href="Sketcher_CreateOctagon.html" title="Sketcher CreateOctagon">Octagon</a>, <a href="Sketcher_CreateRegularPolygon.html" title="Sketcher CreateRegularPolygon">Polygon</a>, <a href="Sketcher_CreateSlot.html" title="Sketcher CreateSlot">Slot</a>, <a href="Sketcher_CreateArcSlot.html" title="Sketcher CreateArcSlot">Arc Slot</a>, <a href="Sketcher_CreateBSpline.html" title="Sketcher CreateBSpline">B-Spline</a>, <a href="Sketcher_CreatePeriodicBSpline.html" title="Sketcher CreatePeriodicBSpline">Periodic B-Spline</a>, <a href="Sketcher_CreateBSplineByInterpolation.html" title="Sketcher CreateBSplineByInterpolation">B-Spline From Knots</a>, <a href="Sketcher_CreatePeriodicBSplineByInterpolation.html" title="Sketcher CreatePeriodicBSplineByInterpolation">Periodic B-Spline From Knots</a>, <a href="Sketcher_ToggleConstruction.html" title="Sketcher ToggleConstruction">Toggle Construction Geometry</a></li></ul>
 <hr>
@@ -132,35 +135,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20250920110045
+Cached time: 20260121053941
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.124 seconds
-Real time usage: 0.154 seconds
-Preprocessor visited node count: 436/1000000
-Post&#8208;expand include size: 24424/2097152 bytes
-Template argument size: 9767/2097152 bytes
+CPU time usage: 0.122 seconds
+Real time usage: 0.162 seconds
+Preprocessor visited node count: 448/1000000
+Post&#8208;expand include size: 24396/2097152 bytes
+Template argument size: 9753/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3454/5000000 bytes
+Unstrip post&#8208;expand size: 3474/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.435      1 -total
- 29.24%    7.436      1 Template:Sketcher_Tools_navi
- 18.81%    4.785      2 Template:Navigation_menu_2
- 17.59%    4.475      1 Template:GuiCommand
- 11.87%    3.020      1 Template:Userdocnavi
-  9.28%    2.361      2 Template:Docnav
-  8.39%    2.134      2 Template:Incode
-  5.86%    1.491      1 Template:Code
-  5.55%    1.411      2 Template:Version
-  4.14%    1.052      3 Template:KEY
+100.00%   23.284      1 -total
+ 25.67%    5.976      1 Template:Sketcher_Tools_navi
+ 22.47%    5.233      2 Template:Navigation_menu_2
+ 15.71%    3.658      1 Template:GuiCommand
+ 13.28%    3.092      1 Template:Userdocnavi
+  9.69%    2.256      2 Template:Docnav
+  7.95%    1.850      1 Template:Code
+  6.17%    1.436      2 Template:Version
+  5.72%    1.333      5 Template:MenuCommand
+  5.49%    1.278      2 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1755-0!canonical and timestamp 20250920110045 and revision id 1645941. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1755-0!canonical and timestamp 20260121053946 and revision id 1741785. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
