--- a/wiki/it/Macro_FCCircularText.html
+++ b/wiki/it/Macro_FCCircularText.html
@@ -432,10 +432,8 @@ I comandi non utilizzabili con l'opzione scelta sono visualizzati in grigio.
 <p><span id="Parameters_available"></span>
 </p>
 <h3><span class="mw-headline" id="Parametri_disponibili">Parametri disponibili</span></h3>
-<div class="mw-translate-fuzzy">
-<p>Alcuni parametri sono disponibili nei parametri di FreeCAD vedere:<b>Menu &rarr; Tools &rarr; Edit parameters...</b>
+<p>Alcuni parametri sono disponibili nei parametri di FreeCAD vedere:<b>Menu &rarr; Strumenti &rarr; Modifica parametri...</b>
 </p>
-</div>
 <ul><li>User parameter: BaseApp/Preferences/Macros/FCMmacros/FCCircularText</li></ul>
 <ul><li><ul><li><code>switchModeTextList</code>&nbsp;:
 <ul><li><code>false</code> normale modalit&agrave; di testo (e nero) si trasforma off switchFontComBox</li>
@@ -950,15 +948,15 @@ Modalit&agrave; rilievo:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121081310
+Cached time: 20260121081357
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.446 seconds
-Real time usage: 0.646 seconds
-Preprocessor visited node count: 1648/1000000
-Post&#8208;expand include size: 41050/2097152 bytes
-Template argument size: 12613/2097152 bytes
+CPU time usage: 0.424 seconds
+Real time usage: 0.587 seconds
+Preprocessor visited node count: 1647/1000000
+Post&#8208;expand include size: 41057/2097152 bytes
+Template argument size: 12620/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
@@ -966,19 +964,19 @@ Unstrip post&#8208;expand size: 66761/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  437.468      1 -total
-  3.32%   14.530      1 Template:Draft_Tools_navi/it
-  2.70%   11.794      1 Template:Userdocnavi/it
-  1.60%    7.011      2 Template:Navigation_menu_2
-  1.39%    6.070     10 Template:Code
-  0.77%    3.378     10 Template:CheckBox
-  0.75%    3.268      7 Template:RadioButton
-  0.69%    3.037      3 Template:ColoredText
-  0.62%    2.722      6 Template:SpinBox
-  0.51%    2.212      1 Template:Macro/it
+100.00%  335.248      1 -total
+ 12.11%   40.613     10 Template:Code
+  3.88%   13.003      1 Template:Draft_Tools_navi/it
+  2.71%    9.088      1 Template:Userdocnavi/it
+  1.52%    5.100      2 Template:Navigation_menu_2
+  1.40%    4.706      7 Template:RadioButton
+  1.36%    4.558     19 Template:Clear
+  1.17%    3.934     10 Template:CheckBox
+  1.13%    3.799      3 Template:ColoredText
+  1.10%    3.679      1 Template:Macro/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260121081310 and revision id 1741797. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260121081356 and revision id 1741799. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
