--- a/wiki/it/Macro_FCCircularText.html
+++ b/wiki/it/Macro_FCCircularText.html
@@ -739,8 +739,8 @@ Modalit&agrave; rilievo:
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 832px">
-			<div class="thumb" style="width: 827px; height: 654px;"><span typeof="mw:File"><a href="../index.php?title=YamahaDrumBadge00.gif&amp;filetimestamp=20231118115007&amp;.html" class="mw-file-description" title="Utilizzo esemplificativo (Curved text on a flat surface?)"><img alt="Utilizzo esemplificativo (Curved text on a flat surface?)" src="../File/YamahaDrumBadge00.gif" decoding="async" width="797" height="624" class="mw-file-element" data-file-width="797" data-file-height="624"></a></span></div>
-			<div class="gallerytext">Utilizzo esemplificativo (<a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=82577">Curved text on a flat surface?</a>)</div>
+			<div class="thumb" style="width: 827px; height: 654px;"><span typeof="mw:File"><a href="../index.php?title=YamahaDrumBadge00.gif&amp;filetimestamp=20231118115007&amp;.html" class="mw-file-description" title="Esempio di utilizzo (Testo curvo su una superficie piana?)"><img alt="Esempio di utilizzo (Testo curvo su una superficie piana?)" src="../File/YamahaDrumBadge00.gif" decoding="async" width="797" height="624" class="mw-file-element" data-file-width="797" data-file-height="624"></a></span></div>
+			<div class="gallerytext">Esempio di utilizzo (<a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=82577">Testo curvo su una superficie piana?</a>)</div>
 		</li>
 </ul>
 </center>
@@ -948,35 +948,35 @@ Modalit&agrave; rilievo:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121081357
+Cached time: 20260121081430
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.424 seconds
-Real time usage: 0.587 seconds
+CPU time usage: 0.429 seconds
+Real time usage: 0.576 seconds
 Preprocessor visited node count: 1647/1000000
 Post&#8208;expand include size: 41057/2097152 bytes
 Template argument size: 12620/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66761/5000000 bytes
+Unstrip post&#8208;expand size: 66764/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  335.248      1 -total
- 12.11%   40.613     10 Template:Code
-  3.88%   13.003      1 Template:Draft_Tools_navi/it
-  2.71%    9.088      1 Template:Userdocnavi/it
-  1.52%    5.100      2 Template:Navigation_menu_2
-  1.40%    4.706      7 Template:RadioButton
-  1.36%    4.558     19 Template:Clear
-  1.17%    3.934     10 Template:CheckBox
-  1.13%    3.799      3 Template:ColoredText
-  1.10%    3.679      1 Template:Macro/it
+100.00%  309.332      1 -total
+  2.96%    9.170      1 Template:Draft_Tools_navi/it
+  2.46%    7.620      1 Template:Userdocnavi/it
+  1.78%    5.513     10 Template:Code
+  1.60%    4.944      2 Template:Navigation_menu_2
+  1.52%    4.707      1 Template:Macro/it
+  1.48%    4.578      7 Template:RadioButton
+  1.28%    3.956     10 Template:CheckBox
+  1.21%    3.748     19 Template:Clear
+  1.02%    3.156      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260121081356 and revision id 1741799. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260121081430 and revision id 1741801. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
