--- a/wiki/it/Macro_FCCircularText.html
+++ b/wiki/it/Macro_FCCircularText.html
@@ -749,12 +749,8 @@ Modalit&agrave; rilievo:
 </p>
 <h2><span class="mw-headline" id="Limitazioni">Limitazioni</span></h2>
 <p><i>Note</i> (PS: &egrave; possibile che si verifichi un errore tra le versioni. Pubblica il problema sul forum e attendi la correzione aggiornata o il rollback a una versione precedente della macro. Grazie)
-</p>
-<div class="mw-translate-fuzzy">
-<p>&Egrave; possibile che due caratteri si sovrappongano, qui un piccolo rimedio con <a rel="nofollow" class="external text" href="https://www.freecadweb.org/wiki/Macro_Rotate_To_Point">Macro_Rotate_To_Point</a>
-</p>
-</div>
-<p><br>
+</p><p>&Egrave; possibile che due caratteri si sovrappongano. In tal caso, ecco una soluzione alternativa: utilizzare la <a rel="nofollow" class="external text" href="https://wiki.freecad.org/Macro_Rotate_To_Point">Macro Rotate-To-Point</a>.
+<br>
 </p>
 <center>
 <ul class="gallery mw-gallery-traditional">
@@ -948,13 +944,13 @@ Modalit&agrave; rilievo:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121081430
+Cached time: 20260121081458
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.429 seconds
-Real time usage: 0.576 seconds
-Preprocessor visited node count: 1647/1000000
+CPU time usage: 0.446 seconds
+Real time usage: 0.582 seconds
+Preprocessor visited node count: 1646/1000000
 Post&#8208;expand include size: 41057/2097152 bytes
 Template argument size: 12620/2097152 bytes
 Highest expansion depth: 6/100
@@ -964,19 +960,19 @@ Unstrip post&#8208;expand size: 66764/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  309.332      1 -total
-  2.96%    9.170      1 Template:Draft_Tools_navi/it
-  2.46%    7.620      1 Template:Userdocnavi/it
-  1.78%    5.513     10 Template:Code
-  1.60%    4.944      2 Template:Navigation_menu_2
-  1.52%    4.707      1 Template:Macro/it
-  1.48%    4.578      7 Template:RadioButton
-  1.28%    3.956     10 Template:CheckBox
-  1.21%    3.748     19 Template:Clear
-  1.02%    3.156      1 Template:Codeextralink
+100.00%  341.296      1 -total
+  4.52%   15.419      1 Template:Draft_Tools_navi/it
+  2.25%    7.686      7 Template:RadioButton
+  2.06%    7.042      2 Template:Navigation_menu_2
+  1.93%    6.590      1 Template:Userdocnavi/it
+  1.56%    5.336     10 Template:Code
+  1.51%    5.152      1 Template:Macro/it
+  1.31%    4.472     10 Template:CheckBox
+  1.21%    4.117      3 Template:ColoredText
+  1.10%    3.765      1 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260121081430 and revision id 1741801. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39644-0!canonical and timestamp 20260121081457 and revision id 1741803. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
